--- a/index.html
+++ b/index.html
@@ -67,7 +67,15 @@
             </nav>
         </div>
     </header>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J2CEKL6K0X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-J2CEKL6K0X');
+</script>
     <main>
         <section class="hero">
             <div class="container">
