--- a/terms.html
+++ b/terms.html
@@ -201,7 +201,7 @@
             If you have any questions about these Terms, please contact us:
         </p>
         <ul>
-            <li>By email: </li>
+            <li>By email: support@ai-doll-generator.org </li>
         </ul>
         
         <div class="footer-links">
