--- a/privacy.html
+++ b/privacy.html
@@ -162,7 +162,7 @@
             If you have any questions about this Privacy Policy, please contact us:
         </p>
         <ul>
-            <li>By email: </li>
+            <li>By email: support@ai-doll-generator.org </li>
         </ul>
         
         <a href="index.html" class="back-link">← Back to AI Doll Generator</a>
