--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Doll Generator | Free AI Action Figure Generator</title>
-    <meta name="description" content="Create your own AI action figure with our free AI doll generator, which allows you to make real-life action figures for any character in seconds. Just upload your picture, generate AI doll action figure now.">
-    <meta name="keywords" content="AI Doll Generator, AI Action Figure, AI Doll Trend Generator, Action Figure Generator, Action Figure Trend, Free AI Action Figure">
+    <meta name="description" content="Create your own AI action figure with our free AI doll generator, which allows you to make real-life action figures for any character in seconds.">
+    <meta name="keywords" content="AI Doll Generator, AI Action Figure, AI Doll Trend Generator, Action Figure Generator">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
